// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Onboarding LandingScreen component should pass additional props to Slide 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "bottom": 0,
          "overflow": "hidden",
          "top": 0,
        },
      ]
    }
  />,
  <BVLinearGradient
    colors={
      Array [
        4294967295,
        4294506484,
      ]
    }
    endPoint={
      Object {
        "x": 0.5,
        "y": 1,
      }
    }
    locations={null}
    startPoint={
      Object {
        "x": 0.5,
        "y": 0,
      }
    }
    style={
      Object {
        "flex": 1,
        "height": "100%",
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "minHeight": "100%",
        }
      }
      overScrollMode="auto"
      scrollEnabled={false}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 16,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/ui/LandingScreen/img/logo-orange.jpg",
              }
            }
            style={
              Object {
                "aspectRatio": 1,
                "height": 48,
                "marginBottom": 16,
                "width": 48,
              }
            }
          />
          <Text
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Black",
                "fontSize": 43,
                "lineHeight": 49.45,
                "marginBottom": 16,
              }
            }
          >
            Meet the Church Leaders Conference App
          </Text>
          <Text
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
          >
            Your go-to resource for schedules, maps, news and of course - Farkle.
          </Text>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "flexDirection": "row-reverse",
          "justifyContent": "space-between",
          "left": 0,
          "marginVertical": 8,
          "paddingHorizontal": 16,
          "paddingVertical": 0,
          "position": "absolute",
          "right": 0,
        }
      }
      vertical={false}
    >
      <RCTSafeAreaView
        edges={
          Array [
            "bottom",
          ]
        }
        emulateUnlessSupported={true}
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            bordered={false}
            disabled={false}
            pill={true}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#00676D",
                "borderColor": "#00676D",
                "borderRadius": 48,
                "borderWidth": 2,
                "elevation": 2,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "opacity": 1,
                "overflow": "hidden",
                "paddingHorizontal": 16,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
            >
              Next
            </Text>
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={20}
              bbWidth={20}
              focusable={false}
              height={20}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  Object {
                    "marginLeft": 8,
                    "marginRight": -8,
                  },
                  Object {
                    "opacity": 1,
                  },
                  Object {
                    "flex": 0,
                    "height": 20,
                    "width": 20,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width={20}
            >
              <RNSVGGroup
                fill={
                  Array [
                    0,
                    4278190080,
                  ]
                }
                fillOpacity={1}
                fillRule={1}
                font={Object {}}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={Array []}
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                x={0}
                y={0}
              >
                <RNSVGPath
                  d="M9.65 21L8 20.1l7.72-8.1L8 3.9 9.65 3l8.16 8.54c.27.28.27.64 0 .92L9.67 21z"
                  fill={
                    Array [
                      0,
                      4294967295,
                    ]
                  }
                  fillOpacity={1}
                  fillRule={1}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      0,
                    ]
                  }
                  opacity={1}
                  originX={0}
                  originY={0}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  rotation={0}
                  scaleX={1}
                  scaleY={1}
                  skewX={0}
                  skewY={0}
                  stroke={null}
                  strokeDasharray={null}
                  strokeDashoffset={null}
                  strokeLinecap={0}
                  strokeLinejoin={0}
                  strokeMiterlimit={4}
                  strokeOpacity={1}
                  strokeWidth={1}
                  vectorEffect={0}
                  x={0}
                  y={0}
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
        </View>
      </RCTSafeAreaView>
    </View>
  </BVLinearGradient>,
]
`;

exports[`The Onboarding LandingScreen component should render 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "bottom": 0,
          "overflow": "hidden",
          "top": 0,
        },
      ]
    }
  />,
  <BVLinearGradient
    colors={
      Array [
        4294967295,
        4294506484,
      ]
    }
    endPoint={
      Object {
        "x": 0.5,
        "y": 1,
      }
    }
    locations={null}
    startPoint={
      Object {
        "x": 0.5,
        "y": 0,
      }
    }
    style={
      Object {
        "flex": 1,
        "height": "100%",
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "minHeight": "100%",
        }
      }
      overScrollMode="auto"
      scrollEnabled={false}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 16,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/ui/LandingScreen/img/logo-orange.jpg",
              }
            }
            style={
              Object {
                "aspectRatio": 1,
                "height": 48,
                "marginBottom": 16,
                "width": 48,
              }
            }
          />
          <Text
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Black",
                "fontSize": 43,
                "lineHeight": 49.45,
                "marginBottom": 16,
              }
            }
          >
            Meet the Church Leaders Conference App
          </Text>
          <Text
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
          >
            Your go-to resource for schedules, maps, news and of course - Farkle.
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </BVLinearGradient>,
]
`;

exports[`The Onboarding LandingScreen component should render a custom description 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "bottom": 0,
          "overflow": "hidden",
          "top": 0,
        },
      ]
    }
  />,
  <BVLinearGradient
    colors={
      Array [
        4294967295,
        4294506484,
      ]
    }
    endPoint={
      Object {
        "x": 0.5,
        "y": 1,
      }
    }
    locations={null}
    startPoint={
      Object {
        "x": 0.5,
        "y": 0,
      }
    }
    style={
      Object {
        "flex": 1,
        "height": "100%",
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "minHeight": "100%",
        }
      }
      overScrollMode="auto"
      scrollEnabled={false}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 16,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/ui/LandingScreen/img/logo-orange.jpg",
              }
            }
            style={
              Object {
                "aspectRatio": 1,
                "height": 48,
                "marginBottom": 16,
                "width": 48,
              }
            }
          />
          <Text
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Black",
                "fontSize": 43,
                "lineHeight": 49.45,
                "marginBottom": 16,
              }
            }
          >
            Meet the Church Leaders Conference App
          </Text>
          <Text
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
          >
            Custom description text
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </BVLinearGradient>,
]
`;

exports[`The Onboarding LandingScreen component should render a custom title 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "bottom": 0,
          "overflow": "hidden",
          "top": 0,
        },
      ]
    }
  />,
  <BVLinearGradient
    colors={
      Array [
        4294967295,
        4294506484,
      ]
    }
    endPoint={
      Object {
        "x": 0.5,
        "y": 1,
      }
    }
    locations={null}
    startPoint={
      Object {
        "x": 0.5,
        "y": 0,
      }
    }
    style={
      Object {
        "flex": 1,
        "height": "100%",
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "minHeight": "100%",
        }
      }
      overScrollMode="auto"
      scrollEnabled={false}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 16,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/ui/LandingScreen/img/logo-orange.jpg",
              }
            }
            style={
              Object {
                "aspectRatio": 1,
                "height": 48,
                "marginBottom": 16,
                "width": 48,
              }
            }
          />
          <Text
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Black",
                "fontSize": 43,
                "lineHeight": 49.45,
                "marginBottom": 16,
              }
            }
          >
            Custom title text
          </Text>
          <Text
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
          >
            Your go-to resource for schedules, maps, news and of course - Farkle.
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </BVLinearGradient>,
]
`;

exports[`The Onboarding LandingScreen component should render with a custom text color 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "bottom": 0,
          "overflow": "hidden",
          "top": 0,
        },
      ]
    }
  />,
  <BVLinearGradient
    colors={
      Array [
        4294967295,
        4294506484,
      ]
    }
    endPoint={
      Object {
        "x": 0.5,
        "y": 1,
      }
    }
    locations={null}
    startPoint={
      Object {
        "x": 0.5,
        "y": 0,
      }
    }
    style={
      Object {
        "flex": 1,
        "height": "100%",
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "minHeight": "100%",
        }
      }
      overScrollMode="auto"
      scrollEnabled={false}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 16,
            }
          }
        >
          <Image
            color="salmon"
            source={
              Object {
                "testUri": "../../../src/ui/LandingScreen/img/logo-orange.jpg",
              }
            }
            style={
              Object {
                "aspectRatio": 1,
                "height": 48,
                "marginBottom": 16,
                "width": 48,
              }
            }
          />
          <Text
            color="salmon"
            style={
              Object {
                "color": "salmon",
                "fontFamily": "InterUI-Black",
                "fontSize": 43,
                "lineHeight": 49.45,
                "marginBottom": 16,
              }
            }
          >
            Meet the Church Leaders Conference App
          </Text>
          <Text
            color="salmon"
            style={
              Object {
                "color": "salmon",
                "fontFamily": "InterUI-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
          >
            Your go-to resource for schedules, maps, news and of course - Farkle.
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </BVLinearGradient>,
]
`;

exports[`The Onboarding LandingScreen component should render with an ImageComponent 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "bottom": 0,
          "overflow": "hidden",
          "top": 0,
        },
      ]
    }
  />,
  <BVLinearGradient
    colors={
      Array [
        4294967295,
        4294506484,
      ]
    }
    endPoint={
      Object {
        "x": 0.5,
        "y": 1,
      }
    }
    locations={null}
    startPoint={
      Object {
        "x": 0.5,
        "y": 0,
      }
    }
    style={
      Object {
        "flex": 1,
        "height": "100%",
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "minHeight": "100%",
        }
      }
      overScrollMode="auto"
      scrollEnabled={false}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "overflow": "hidden",
              "width": "100%",
            }
          }
        >
          <Image
            collapsable={false}
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "https://picsum.photos/375/812/?random",
                  "url": "https://picsum.photos/375/812/?random",
                },
              ]
            }
            style={
              Object {
                "aspectRatio": 1,
                "backgroundColor": "#A5A5A5",
                "resizeMode": "cover",
                "width": "100%",
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 16,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/ui/LandingScreen/img/logo-orange.jpg",
              }
            }
            style={
              Object {
                "aspectRatio": 1,
                "height": 48,
                "marginBottom": 16,
                "width": 48,
              }
            }
          />
          <Text
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Black",
                "fontSize": 43,
                "lineHeight": 49.45,
                "marginBottom": 16,
              }
            }
          >
            Meet the Church Leaders Conference App
          </Text>
          <Text
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
          >
            Your go-to resource for schedules, maps, news and of course - Farkle.
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </BVLinearGradient>,
]
`;
